Implementar disputa local como bloqueador de privacidad
